--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "clsx": "^2.1.1",
+    "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.4.0"
   },
