--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "clsx": "^2.1.1",
-    "i18next": "^23.11.5",
     "firebase": "^10.12.3",
+    "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
