--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.1.0",
+    "@paypal/react-paypal-js": "^8.5.0",
     "@reduxjs/toolkit": "^2.2.6",
     "clsx": "^2.1.1",
     "firebase": "^10.12.3",
@@ -21,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.4.0"
